@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle
hide methods

class Vaccine {
    - commercial_name
    - brand
    - technology
}

class Vaccine_Type {
    - type_code
    - disease
    - short_description
}

class Facility {
    - name
    - postal_adress
    - phone_number
    - email
    - website_adress
    - opening_hours
    - closing_hours
    - max_vaccines_per_hour
}

class Waiting_Room{
    -SNS_User_List
    }


class Employee {
    - Employee_id
    - name
    - postal_adress
    - phone_number
    - email
    -citizenCardNumber
    - role
}

class SNS_User {
    - name
    - date_of_birth
    - sex
    - postal_address
    - phone_number
    - email
    - citizen_card_number
    - sns_user_number
}

class Vaccination_Appointment {
    - facility
    - status
    - date
    - time
}

class Current_Outbreak {
    - disease
    - start_date
    - end_date
    - is_current
}

class Community_Mass_Vaccination_Center {
    - vaccine_type
}

class Healthcare_Center {
}

class Nurse {
}

class Receptionist {
}

class Event {
    - brand
    - lot_number
    - reaction_notes
}

class Administrator {
    - name
    - email
    - phone_number
}

class Vaccine_Certificate {
    - issue_day
}

class VaccinationProcess {
    - vaccination_date
    - vaccine_type
    - lot_number
    - sns_user_number
}

class RecoveryRoom {
    - recovery_start_time
}

class User_Arrival{
    - arrival_time
}

Employee <|-- Nurse
Employee <|-- Receptionist

Facility <|-- Community_Mass_Vaccination_Center
Facility <|-- Healthcare_Center

Facility <|-- Waiting_Room
Facility <|-- RecoveryRoom

Waiting_Room "1" -down-- "*" SNS_User: >

Employee "1" -up-- "0..*" Facility : works in >

Administrator "1" -right-- "0..*" Employee: register >

Administrator "1" -down-- "0..*" Vaccine: register >

Administrator "1" -right-- "0..*" Facility: register >

Administrator "1" -down-- "0..*" Vaccine_Type: specify a >

SNS_User "1" -down-- "0..1" Vaccination_Appointment: makes a >

Receptionist "1" -right-- "0..*" SNS_User: registers >

Current_Outbreak "1" -left-- "1" Vaccine_Type: correlated >

Vaccine "0..*" -right-- "1" Vaccine_Type: has >

Nurse "1" -down-- "0..*" Vaccine_Certificate: creates >

Vaccine_Certificate "0..1" -down-- "1" Event: issued for >

Receptionist "1" -down-- "0..*" User_Arrival: registers a >

User_Arrival "1" -down-- "0..1" Event: creates >

SNS_User "1" -up-- "0..*" User_Arrival: has >

Facility "1" -down-- "0..*" User_Arrival: has >

Vaccination_Appointment "0..*" -down-- "1" Vaccine_Type: correlated >

Vaccination_Appointment "1" -up-- "0..1" Event: generates >

Event "0..*" -right-- "1" SNS_User: belongs >

Event "1" -down-- "1" Vaccine_Type:has >

SNS_User "1"  -left-- "0..1" Vaccine_Certificate: has >

VaccinationProcess "0..*" -left-- "1" SNS_User: registers in >

VaccinationProcess "0..*" -left-- "1" Nurse:  >

VaccinationProcess "0..*" -left-- "1" Vaccine:  >

SNS_User "1" -right-- "1" RecoveryRoom: assigned to >



@enduml
